# route_sta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev  main.cpp
ISPD2025_benchmarks/: GR.tcl  evaluate.tcl  gnerate_simple_input.tcl  helper.tcl  lib_setup.tcl  run_ariane.tcl  run_ariane_baseline.tcl  run_ariane_clean.tcl  run_ariane_new.tcl  run_ariane_sort.tcl  run_bsg.tcl  run_bsg_baseline.tcl  run_bsg_sort.tcl  run_group_baseline.tcl  run_group_sort.tcl  run_nvdla.tcl  run_nvdla_baseline.tcl  run_nvdla_sort.tcl  run_tile_baseline.tcl  run_tile_sort.tcl  set_design.tcl
ISPD2025_benchmarks/results/: ariane.xlsx  test.xlsx  ~$test.xlsx
ISPD2025_benchmarks/results/ariane/: netIndices.txt
ISPD2025_benchmarks/results/ariane_nostg2_sort/: netIndices.txt
ISPD2025_benchmarks/results/old/only_stage1/ariane/baseline/: netIndices.txt
ISPD2025_benchmarks/results/only_stage1/nvdla/baseline/: netIndices.txt
ISPD2025_benchmarks/results/runtimeTest8t/nvdla/sort65/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/ariane/sort/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/ariane/sort65ep/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/ariane/sort75/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/nvdla/sort65ep/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/tile/sort65ep/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2/tile/sort95/: netIndices.txt
ISPD2025_benchmarks/results/stage1+2_old/tile/baseline/: netIndices.txt
ISPD2025_benchmarks/results/strat95/nvdla/: netIndices.txt
ISPD25_benchmarks/: test.tcl
flute/: CMakeLists.txt
route/: CMakeLists.txt  LefDefDatabase.cpp  LefDefDatabase.hpp  LefDefReader.cpp  LefDefReader.hpp  RouteTcl.cpp  RouteTcl.hpp  utils.hpp
route/app/: App.cpp  App.hpp
route/context/: Context.cpp  Context.hpp
route/cugr2/: GlobalRouter.cpp  GlobalRouter.h  GridGraph.cpp  GridGraph.h  MazeRoute.cpp  MazeRoute.h  MetalLayer.hpp  PatternRoute.cpp  PatternRoute.h  base.h
route/lefdef/: DefDatabase.cpp  DefDatabase.hpp  LefDatabase.cpp  LefDatabase.hpp  LefDefDatabase.cpp  LefDefDatabase.hpp  LefDefReader.cpp  LefDefReader.hpp
route/object/: Design.cpp  Design.hpp  GRContext.cpp  GRContext.hpp  GRInstance.hpp  GRLayer.hpp  GRNet.cpp  GRNet.hpp  GRNetwork.cpp  GRNetwork.hpp  GRPin.cpp  GRPin.hpp  GRRoute.hpp  GRTechnology.cpp  GRTechnology.hpp  GRTree.cpp  GRTree.hpp  Grid.cpp  Grid.hpp  Helper.hpp  Route.cpp  Route.hpp  Technology.cpp  Technology.hpp  geo.hpp
route/parser/: defParser.cpp  guideParser.cpp  lefParser.cpp  parser.hpp
route/stt/: flute.cpp  flute.h  pd.cpp  pd.h  steiner.h
route/tcl/: RouteTcl.cpp  RouteTcl.hpp
route/timing/: MakeWireParasitics.cpp  MakeWireParasitics.hpp
route/util/: common.hpp  geo.hpp  log.cpp  log.hpp
test/: FA_STR.sdf  FA_STR.tcl  FA_STR.v  aftersort.txt  example1.def  gcd_nangate45.tcl  gcd_nangate45_new-ref.guide  gcd_nangate45_new.def  gcd_nangate45_new.guide  gcd_nangate_new-cugr2.guide  gcd_syn.v  netIndices.txt  slack.txt  slackfile1  slackfile2  test.tcl  test1.tcl
test/ISPD25_benchmarks/: test_ispd25.tcl
test/Nangate45/: setRC.tcl
